--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span id="pitch-label" class="ms-2">1</span>
       </div>
     </div>
-    <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Type here...">Seja sinceramente bem-vindo(a)!</textarea>
+    <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Type here...">Seja sinceramente bem-vindo ou bem vinda!</textarea>
     <div class="mb-5">
       <button id="start" class="btn btn-success mt-5 me-3">Iniciar</button>
       <button id="pause" class="btn btn-warning mt-5 me-3">Pausa</button>
